# KNN2

./: .gitignore  CMakeLists.txt  Makefile  Makefile.gl  Makefile.gl.omp  README.md  build.sh  bulid.sh
.github/ISSUE_TEMPLATE/: bug_report.md
cmake/: FindARMADILLO.cmake  FindArmadillo.cmake  FindKeras2cpp.cmake  FindMpi.cmake  Findarmadillo.cmake  Findkeras2cpp.cmake  Findmpi.cmake
examples/1/: kn.param
examples/1/config0/end_0/: POSCAR  end.cfg
examples/1/config0/end_1/: POSCAR  end.cfg
examples/1/config0/end_2/: POSCAR  end.cfg
examples/1/config0/end_3/: INCAR  POSCAR  end.cfg
examples/1/config0/end_4/: POSCAR  end.cfg
examples/1/config0/start/: POSCAR  start.cfg
examples/1/config1/end_0/: POSCAR  end.cfg
examples/1/config1/end_1/: POSCAR  end.cfg
examples/1/config1/end_2/: POSCAR  end.cfg
examples/1/config1/end_3/: POSCAR  end.cfg
examples/1/config1/end_4/: POSCAR  end.cfg
examples/1/config1/start/: POSCAR  start.cfg
examples/1/config2/end_0/: POSCAR  end.cfg
examples/1/config2/end_1/: POSCAR  end.cfg
examples/1/config2/end_2/: POSCAR  end.cfg
examples/1/config2/end_3/: POSCAR  end.cfg
examples/1/config2/end_4/: KPOINTS  POSCAR  end.cfg
examples/1/config2/start/: POSCAR  start.cfg
examples/1/config3/end_0/: POSCAR  end.cfg
examples/1/config3/end_1/: POSCAR  end.cfg
examples/1/config3/end_2/: POSCAR  end.cfg
examples/1/config3/end_3/: POSCAR  end.cfg
examples/1/config3/end_4/: POSCAR  POTCAR  end.cfg
examples/1/config3/start/: POSCAR  start.cfg
examples/1/config4/end_0/: POSCAR  end.cfg
examples/1/config4/end_1/: POSCAR  end.cfg
examples/1/config4/end_2/: POSCAR  end.cfg
examples/1/config4/end_3/: POSCAR  end.cfg
examples/1/config4/end_4/: POSCAR  end.cfg
examples/1/config4/start/: POSCAR  start.cfg
examples/2/: kn.param
examples/2/test_Al_KP/test12/: KPOINTS
examples/2/test_Al_KP/test16/: KPOINTS  POSCAR
examples/2/test_Al_KP/test4/: KPOINTS
examples/2/test_Al_KP/test8/: KPOINTS  start.cfg
include/: Elem.inl  FCCEmbededCluster.h  KMCEvent.h  KNAtom.h  KNHome.h  KNUtility.h  LRUCache.h  LSEvent.h  LSKMC.h  OrderedStruct.h  gbCnf.h  gbDef.h  gbUtl.h
makefiles/: greatlakes.include  macos.include  stampede2.include
prod/random_config/256Atoms/240_8_5_3/: kn.param  log.txt
prod/random_config/256Atoms/240_8_5_3/config0/e_0/: POSCAR  end.cfg
prod/random_config/256Atoms/240_8_5_3/config0/e_1/: POSCAR  end.cfg
prod/random_config/256Atoms/240_8_5_3/config0/e_2/: POSCAR  end.cfg
prod/random_config/256Atoms/240_8_5_3/config0/e_3/: POSCAR  end.cfg
prod/random_config/256Atoms/240_8_5_3/config0/e_4/: POSCAR  end.cfg
prod/random_config/256Atoms/241_7_5_3/: kn.param  log.txt
prod/random_config/256Atoms/242_6_5_3/: kn.param  log.txt
prod/random_config/256Atoms/242_6_6_2/: kn.param  log.txt
prod/random_config/256Atoms/242_7_5_2/: kn.param  log.txt
prod/random_config/256Atoms/242_8_4_2/: kn.param  log.txt
prod/random_config/256Atoms/244_5_6_1/: kn.param  log.txt
prod/random_config/256Atoms/244_7_4_1/: kn.param  log.txt
scripts/: getAtomicConc.py  ipynb.tar  prepNEB.sh
scripts/cluster_analysis/: clusterAnalysis.py
scripts/gen_sphere/: start.cfg  transfer.sh
scripts/ipynb/: train_NN_Keras_ordered-export.ipynb
scripts/submit/: check_dist_pl.sh  collect_NEB_barrier.sh  submit_all_stampede2.sh
src/: FCCConfig.cpp  KMCEvent.cpp  KMCSimulation.cpp  KNBondCount.cpp  KNEncode.cpp  KNEncodeCart.cpp  KNHome.cpp  KNMPI.cpp  KNMain.cpp  KNOrdered.cpp  KNParam.cpp  KNRandom.cpp  KNShift.cpp  KNSolidSol.cpp  KNUtility.cpp  KNvasp.cpp  LRUCache.cpp  LSEvent.cpp  LSKMC.cpp  MAKEFILE.FLUX  MAKEFILE.MAC  Makefile  OrderedStruct.cpp  encode.param  findClusters.cpp  gbBox.cpp  gbInCnf.cpp  gbOutCnf.cpp  kn.param  neighbor.cpp  test_keras.cpp
src/params_example/: bondcount.list.param  kmc.param  kmc.param.lskmc  kn.encode.param  kn.param.clusterstate  kn.param.findclusters  kn.param.ordered  kn.param.ordered.antiphase  kn.param.ordered.diffcon  kn.param.ordered.random  kn.param.specific  list.txt
(+952 files in other folders)
